--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ safestopclient
 safestopclient-latest.tar.bz2
 safestopclient_linux
 .DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
